; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/network/netstat/extr_netstat.c_wmain.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/network/netstat/extr_netstat.c_wmain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXIT_FAILURE = common dso_local global i32 0, align 4
@StdErr = common dso_local global i32 0, align 4
@IDS_ERROR_WSA_START = common dso_local global i32 0, align 4
@bLoopOutput = common dso_local global i64 0, align 8
@Interval = common dso_local global i32 0, align 4
@EXIT_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wmain(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32** %1, i32*** %5, align 8
  %8 = call i32 (...) @ConInitStdStreams()
  %9 = load i32, i32* %4, align 4
  %10 = load i32**, i32*** %5, align 8
  %11 = call i32 @ParseCmdline(i32 %9, i32** %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %2
  %14 = load i32, i32* @EXIT_FAILURE, align 4
  store i32 %14, i32* %3, align 4
  br label %50

15:                                               ; preds = %2
  %16 = call i32 @MAKEWORD(i32 2, i32 2)
  %17 = call i64 @WSAStartup(i32 %16, i32* %7)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %25

19:                                               ; preds = %15
  %20 = load i32, i32* @StdErr, align 4
  %21 = load i32, i32* @IDS_ERROR_WSA_START, align 4
  %22 = call i32 (...) @WSAGetLastError()
  %23 = call i32 @ConResPrintf(i32 %20, i32 %21, i32 %22)
  %24 = load i32, i32* @EXIT_FAILURE, align 4
  store i32 %24, i32* %3, align 4
  br label %50

25:                                               ; preds = %15
  %26 = call i64 (...) @DisplayOutput()
  store i64 %26, i64* %6, align 8
  br label %27

27:                                               ; preds = %35, %25
  %28 = load i64, i64* @bLoopOutput, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %33

30:                                               ; preds = %27
  %31 = load i64, i64* %6, align 8
  %32 = icmp ne i64 %31, 0
  br label %33

33:                                               ; preds = %30, %27
  %34 = phi i1 [ false, %27 ], [ %32, %30 ]
  br i1 %34, label %35, label %40

35:                                               ; preds = %33
  %36 = load i32, i32* @Interval, align 4
  %37 = mul nsw i32 %36, 1000
  %38 = call i32 @Sleep(i32 %37)
  %39 = call i64 (...) @DisplayOutput()
  store i64 %39, i64* %6, align 8
  br label %27

40:                                               ; preds = %33
  %41 = call i32 (...) @WSACleanup()
  %42 = load i64, i64* %6, align 8
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %40
  %45 = load i32, i32* @EXIT_SUCCESS, align 4
  br label %48

46:                                               ; preds = %40
  %47 = load i32, i32* @EXIT_FAILURE, align 4
  br label %48

48:                                               ; preds = %46, %44
  %49 = phi i32 [ %45, %44 ], [ %47, %46 ]
  store i32 %49, i32* %3, align 4
  br label %50

50:                                               ; preds = %48, %19, %13
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}

declare dso_local i32 @ConInitStdStreams(...) #1

declare dso_local i32 @ParseCmdline(i32, i32**) #1

declare dso_local i64 @WSAStartup(i32, i32*) #1

declare dso_local i32 @MAKEWORD(i32, i32) #1

declare dso_local i32 @ConResPrintf(i32, i32, i32) #1

declare dso_local i32 @WSAGetLastError(...) #1

declare dso_local i64 @DisplayOutput(...) #1

declare dso_local i32 @Sleep(i32) #1

declare dso_local i32 @WSACleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
